update commit for junior accessibility
- removed Athletics page to be entirely redone
- removed Athletics page CSS
- added a secret endpoint (/newhome)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,24 +33,24 @@
 
         <div class="announcements">
             <u><h3>Announcements</h3></u>
-            <a href="https://drive.google.com/file/d/1co_0aW1KTrQDb7td5nc4LJpPeQ3T1lHT/preview">Parent Teacher Conferences</a>
+            <a href="/newhome">new home page</a>
             <br>
-            <a href="https://drive.google.com/file/d/1L2iEb9atNsXSZaN_yxu0dTfggvWkIAR6/preview">Career Camp: Summer 23</a>
+            <a href="/newhome">new home page</a>
             <br>
-            <a href="https://enewspaper.makemynewspaper.com/03582eb5f49716/2022-12-05-o-#.Y-PEWK3MKUk">York Tech Times</a>
+            <a href="/newhome">new home page</a>
         </div>
 
 
 
             <div class="quickLinks">
                 <u><h3>Quick Links</h3></u>
-                <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/">Skyward</a>
+                <a href="/newhome">new home page</a>
                 <br>
-                <a href="https://schoology.ytech.edu/login/ldap?destination=home&school=281446774">Schoology</a>
+                <a href="/newhome">new home page</a>
                 <br>
-                <a href="https://www.office.com/">Office 365</a>
+                <a href="/newhome">new home page</a>
                 <br>
-                <a href="https://drive.google.com">Google Drive</a>
+                <a href="/newhome">new home page</a>
             </div>
         </center>
     </div>
