--- a/static/styles.css
+++ b/static/styles.css
@@ -348,21 +348,7 @@ footer a {
 
 
 /*District Map CSS*/
-.google-map {
-    position: relative;
-    margin: 0 auto;
-    width: 65%;
-    height: 0;
-    padding-bottom: 40%;
-}
-
-.google-map iframe {
-    height: 100%;
-    width: 65%;
-    left: 0;
-    top: 0;
-    position: absolute;
-}
+#map { height: 180px; }
   
 
 /* Shop CSV template */
