changed highlight to green

--- a/views/districtmap.ejs
+++ b/views/districtmap.ejs
@@ -19,7 +19,7 @@
         L.geoJSON(geojson, {
           style: function(feature) {
               return {
-                  color: '#ff5555', // red outline
+                  color: '#095540', // red outline
                   weight: 3 // 3-pixel outline width
               };
           }
