--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,7 +6,7 @@
         <style>
             @font-face {
             font-family: 'Autumn Thin';
-            src: url('/fonts/autumnRegular.ttf') format('truetype');
+            src: url('/fonts/Raleway-Regular.ttf') format('truetype');
             }
         </style>
 
@@ -20,8 +20,8 @@
             </div>
 
             <div class="header-links">
-                <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/" style="color: black;">Skyward</a> <br>
-                <a href="https://schoology.ytech.edu/home" style="color: Black;">Schoology</a>
+                <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/" style="color: white;">Skyward</a> <br>
+                <a href="https://schoology.ytech.edu/home" style="color: white;">Schoology</a>
             </div>
         </div>
         <div class="header-pages">
