home page and athletic page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,65 +1,64 @@
 <html>
     <%- include('partials/_header') -%>
-    <!--<link rel="stylesheet" href="home.css">-->
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <head>
-
-        <title>York County School of Technology</title>
-
-    </head>
+    <meta name="viewport" content="width=device-width"/>
+<head>
+    <title>York County School of Technology</title>
+</head>
     <body>
         <div class="home-container">
-        <center>
-            <div class="whyUs">
-                <u><h3>Why York Tech?</h3></u>
-                <p>Why York Tech? Here we teach our students how to be career ready and how to be proffessional.</p>
-                <p>When our students leave York Tech, they are ready to take on the workforce headon and be prepared for what comes ahead of them. </p>
-            </div>
-      
-       
+            <center>
+                
+                <div class="video-background">
+                    <div id="video">
+                        <video autoplay muted loop preload playsinline>
+                            <!-- <source src="video" type="video.mp4"> -->
+                            <source src="/videos/background.mp4" type="video/mp4">
+                            <!-- <source src="/videos/mr_saia.mp4" type="video/mp4"> -->
+                        </video>
+                    </div>
+                </div>
 
+                <div class="whyUs">
+                    <u><h3>Why York Tech?</h3></u>
+                    <p>Why York Tech? Here we teach our students how to be career ready and how to be professional.</p>
+                    <p>When our students leave York Tech, they are ready to take on the workforce head-on and be prepared for what comes ahead of them. </p>
+                </div>
 
+                <div class="quickLinks">
+                    <u><h3>Quick Links</h3></u>
+                    <a href="/newhome">new home page</a>
+                    <br>
+                    <a href="/newhome">new home page</a>
+                    <br>
+                    <a href="/newhome">new home page</a>
+                    <br>
+                    <a href="/newhome">new home page</a>
+                </div>
+                
+                <div class="announcements">
+                    <u><h3>Announcements</h3></u>
+                    <a href="/newhome">new home page</a>
+                    <br>
+                    <a href="/newhome">new home page</a>
+                    <br>
+                    <a href="/newhome">new home page</a>
+                </div>
 
-        <div class="mainInfo">
-            <u><h3>Information</h3></u>
-            <p>2022-23 School Year Calender</p>
-            <p>Free and Reduced Lunch</p>
-            <p>Comcast Internet for Your Home</p>
-            <p>Tech Gear Online Store</p>
+                <div class="mainInfo">
+                    <u><h3>Information</h3></u>
+                    <p>2022-23 School Year Calendar</p>
+                    <p>Free and Reduced Lunch</p>
+                    <p>Comcast Internet for Your Home</p>
+                    <p>Tech Gear Online Store</p>
+                </div>
+
+            </center>
         </div>
-
-
-
-
-        <div class="announcements">
-            <u><h3>Announcements</h3></u>
-            <a href="/newhome">new home page</a>
-            <br>
-            <a href="/newhome">new home page</a>
-            <br>
-            <a href="/newhome">new home page</a>
-        </div>
-
-
-
-            <div class="quickLinks">
-                <u><h3>Quick Links</h3></u>
-                <a href="/newhome">new home page</a>
-                <br>
-                <a href="/newhome">new home page</a>
-                <br>
-                <a href="/newhome">new home page</a>
-                <br>
-                <a href="/newhome">new home page</a>
-            </div>
-        </center>
-    </div>
-            
-    
-      
-
-       
 
     </body>
+
     <%- include('partials/_footer') -%>
+
 </html>
