--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,10 @@
-
-
 a {
-    color: blue
+    color: blue;
+    z-index: 200;
 }
 
 body {
     margin: 0;
-
 }
 
 .Parents {
@@ -65,7 +63,6 @@ font-size: x-large;
     .text-container  {
         width: 100%
     }
-    
 }
 
 /*template styles*/
@@ -75,7 +72,6 @@ font-size: x-large;
 .text-container video {
     width: 80%
 }
-
 
 @media (max-width: 650px) {
     .Parents {
@@ -109,6 +105,7 @@ font-size: x-large;
     font-size: x-large;
     }
 }
+
 /* header Styles */
 
 .header-container {
@@ -117,10 +114,7 @@ font-size: x-large;
     padding-bottom: 150px;
     padding-top:1px;
     padding-left: 10px;
-    
 }
-
-
 
 .header-h1 {
     float: left;
@@ -131,14 +125,11 @@ font-size: x-large;
     font-family: "Autumn Thin";
 }
 
-
 .header-img {
     float: left;
     padding-right: 10px;
     padding-top: 10px;
 }
-
-
 
 .header-links {
     text-align: right;
@@ -146,17 +137,18 @@ font-size: x-large;
     position: absolute;
     top: 15px;
     right: 15px;
-    
-
 }
 
 a:link {
     background-color: transparent; 
     text-decoration: none;
+    z-index: 200;
 }
 
 a:hover {
+
     background-color: #00953b;
+
     text-decoration: underline;
 }
 
@@ -172,9 +164,7 @@ a:visited {
     display: flex;
     text-align: center;
     line-height: 50px; 
-    
 } 
-
 
 .header-pages a {
     border-left: 1px solid;
@@ -182,7 +172,6 @@ a:visited {
     flex-direction: row;
     flex: 1 1 0;
 }
-
 
 /* Footer Styles */
 footer {
@@ -217,12 +206,8 @@ footer a {
     footer {
       flex-direction: column;
     }
-
-
-
-
-    
   }
+
 /* Header Mobile Optimization */
   @media (max-width: 650px) {
     .header-h1 {
@@ -269,78 +254,9 @@ footer a {
 
   }
 
-
-
-
 /* main page please fix this parker = bad at pro gamming*/ 
-.whyUs {
-    border: 3px;
-    border-color: #00953B;
-    background-color: #00953B;
-    width: 600;
-
-  
-    color: white;
-    text-shadow: black 0px 0px 3px;
-    font-family: Arial, Helvetica, sans-serif;
-
-    padding: 10px;
-    margin-top: 15px;
-}
-
-
-.announcements {
-    border: 3px;
-    border-color: #00953B;
-    background-color: #00953B;
-    width: 600;
-
-    color: white;
-    text-shadow: black 0px 0px 3px;
-    font-family: Arial, Helvetica, sans-serif;
- 
-
-    margin-bottom: 200px;
-
-}
-
-
-.quickLinks {
-    border: 3px;
-    border-color: #00953B;
-    background-color: #00953B;
-    width: 600;
-    height: 250px;
-    color: white;
-    text-shadow: black 0px 0px 3px;
-    font-family: Arial, Helvetica, sans-serif;
-
-    position: relative; right: 700px; top: -300px;
-    margin-left: 125px;
-}
-
-.mainInfo {
-    border: 3px;
-    border-color: #00953B;
-    background-color: #00953B;
-    width: 600;
-    height: 250px;
-
-   
-    color: white;
-    text-shadow: black 0px 0px 3px;
-    font-family: Arial, Helvetica, sans-serif;
-
-
-    float:right;
-    margin-right: 15px;
-
-}   
-
 
 /*District Map CSS*/
-
-
 
 /* Shop CSV template */
 .text-container{
@@ -358,5 +274,328 @@ footer a {
 @media (max-width: 650px) {
     .text-container {
         width: 100%;
+    }
+}
+
+/* main page */
+
+/* background video */
+.video-background { 
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;  /* edit this percentage value to change the width of the video on the page */
+    height: 80%; /* edit this percentage value to change the height of the video on the page */
+
+    background-color: #bebebe;
+    font-size: 20;
+    color: gray;
+    
+    border: 2px solid #a8a8a8;
+    border-left: none;
+    border-right: none;
+    
+    z-index:-1;
+}
+
+video {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index:-1;
+}
+
+/* home page div layers */
+.whyUs {
+    position: absolute;
+
+    border: 3px solid;
+    border-color: #00953B;
+    background-color: #00953B;
+    color: white;
+    text-shadow: black 0px 0px 3px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    font-size: 100%;
+    padding: 6px;
+    margin: 5px;
+    top: 30%;
+    left: 34.5%;
+    width: 30%;
+    max-width: 50%;
+    height: 20%;
+    overflow: auto;
+
+    z-index: 10;
+}
+
+.announcements {
+    position: absolute;
+
+    border: 3px solid;
+    border-color: #00953B;
+    background-color: #00953B;
+    color: white;
+    text-shadow: black 0px 0px 3px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    font-size: 100%;
+    padding: 6px;
+    margin: 5px;
+    top: 45%;
+    right: 7%;
+    width: 17%;
+    max-width: 50%;
+    height: 17%;
+    overflow: auto;
+
+    z-index: 10;
+}
+
+.quickLinks {
+    position: absolute;
+
+    border: 3px solid;
+    border-color: #00953B;
+    background-color: #00953B;
+    color: white;
+    text-shadow: black 0px 0px 3px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    font-size: 100%;
+    padding: 6px;
+    margin: 5px;
+    top: 45%;
+    left: 7%;
+    width: 17%;
+    max-width: 50%;
+    height: 17%;
+    overflow: auto;
+
+    z-index: 10;
+}
+
+.mainInfo {
+    position: absolute;
+
+    border: 3px solid;
+    border-color: #00953B;
+    background-color: #00953B;
+    color: white;
+    text-shadow: black 0px 0px 3px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    font-size: 100%;
+    padding: 6px;
+    margin: 5px;
+    top: 55%;
+    left: 34.5%;
+    width: 30%;
+    max-width: 50%;
+    height: 21%;
+    overflow: auto;
+
+    z-index: 10;
+}   
+
+/* home page mobile */
+@media (max-width: 650px) {
+
+    .home-container {
+        position: relative;
+        display: auto;
+        justify-content: center;
+        align-items: center;
+    
+        z-index: 1;
+    }
+
+    .video-background {
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        width: 100%; /* edit this percentage value to change the width of the video on the page */
+        height: 80%; /* edit this percentage value to change the height of the video on the page */
+        background-color: #9c9c9c;
+        z-index:-1;
+    }
+
+    video {
+        position: absolute;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index:-1;
+    }
+    
+    .whyUs {
+        justify-content: center;
+        font-size: 80%;
+        padding: 6px;
+        margin: 5px;
+        top: 5%;
+        left: 21%;
+        width: 80%;
+        max-width: 50%;
+        height: 20%;
+        overflow: auto;
+    }
+
+    .announcements {
+        width: 20%;
+        overflow: auto;
+        font-size: 80%;
+        top: 30%;
+        right: 8%;
+        width: 30%;
+        max-width: 50%;
+        height: 20%;
+
+    }
+
+    .announcements.u {
+        font-size: 50%;
+    }
+
+    .quickLinks {
+        width: 20%;
+        overflow: auto;
+        font-size: 80%;
+        top: 30%;
+        left: 7%;
+        width: 30%;
+        max-width: 50%;
+        height: 20%;
+    }
+
+    .mainInfo {
+        justify-content: center;
+        font-size: 80%;
+        padding: 6px;
+        margin: 5px;
+        bottom: 0;
+        left: 21%;
+        width: 80%;
+        max-width: 50%;
+        height: 30%;
+        overflow: auto;
+    }
+}
+
+/* Athletics Page */
+
+.sports-container {
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    z-index: 1;
+    margin: 1%;
+}
+
+.athletics-summary {
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    /* font-family: ; */
+    font-size: 110%;
+    top: 15%;
+    width: 24%;
+    height: auto;
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    overflow: auto;
+}
+
+.divider {
+    position: relative;
+    align-self: center;
+    border-top: 2px solid rgb(167, 167, 167);
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    margin: auto;
+    height: auto;
+    max-width: 30%;
+    width: 25%;
+    top: 15%;
+    padding: 2%;
+    margin-bottom: -2%;
+}
+
+.mini-divider {
+    position: relative;
+    align-self: center;
+    border-top: 2px solid rgb(167, 167, 167);
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    margin: auto;
+    height: auto;
+    max-width: 20%;
+    width: 15%;
+    padding: 2%;
+    margin-bottom: -4%;
+    margin-top: 1%;
+}
+
+.sports-sections {
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    justify-content: center;
+    padding-bottom: 2%;
+    height: auto;
+    margin: auto;
+    font-size: 115%;
+}
+
+/* Athletics page mobile */
+
+@media (max-width: 650px) {
+    .sports-container {
+        overflow: auto;
+    }
+
+    .athletics-summary {
+        overflow: auto;
+        font-size: 85%;
+        width: 40%;
+        height: auto;
+        margin: auto;
+
+        margin-bottom: 3%;
+    }
+
+    .divider {
+        margin:auto;
+        height: auto;
+        max-width: 60%;
+        width: 50%;
+    }
+
+    .mini-divider {
+        margin:auto;
+        height: auto;
+        max-width: 60%;
+        width: 30%;
+    }
+
+    .sports-sections {
+        margin: auto;
+        height: auto;
     }
 }
