--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -23,7 +23,7 @@
                 <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/Session/" style="color: white;">Skyward</a> <br>
                 <a href="https://schoology.ytech.edu/home" style="color: white;">Schoology</a>
                 <br>
-                <a href="/2022-23Calendar.pdf" style="color:white ;">Calander</a>
+                <a href="/2022-23Calendar.pdf" style="color:white ;">Calender</a>
 
             </div>
         </div>
