--- a/views/template.ejs
+++ b/views/template.ejs
@@ -7,19 +7,17 @@
     <title>Template</title>
 </head>
 <body>
-<center>
-    <div class="text-container">
 
-    <h1>page header goes here</h1>
-
-    <video width="70%" controls="controls"/>
-    <source src="/videos/mr_saia.mp4" type="video/mp4">
-    </video>
-
-    <p>page content goes here</p>
-
+    <div class="left-container">
+        <h1>i love mr smith</h1>
     </div>
-</center>
+    <div class="right-container">
+        <h1>csmith@ilovehotmen.com</h1>
+    </div>
+    <div class="middle-container">
+        <h1>mr smith is love mr smith is life</h1>
+        
+    </div>
 </body>
 <%- include('partials/_footer') -%>
 </html>
