--- a/views/districtmap.ejs
+++ b/views/districtmap.ejs
@@ -11,9 +11,33 @@
 <body>
     <div id="map" style="height: 800px;"></div>
     <script>
-const map = L.map('map').setView([39.9601662, -76.717791], 10);
+const map = L.map('map', {
+  minZoom: 7, // Set the minimum zoom level to 5
+  maxBounds: L.latLngBounds(
+    L.latLng(39.2868132,-80.5645942), // Southwest bound
+    L.latLng(43.667105, -70.2939151) // Northeast bound
+  )
+}).setView([39.9601662, -76.717791], 10);
+
+
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
+//attribution
+L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; <a href="http://ytech.edu">York County School of Technology</a>, Trey Floto'
+}).addTo(map);
+
+//york tech popup
+var marker = L.marker([39.9302254,-76.6869776]).addTo(map)
+    .bindPopup("York County School of Technology")
+    .openPopup();
+/*
+var popup = L.popup()
+    .setLatLng([39.9302254,-76.6869776])
+    .setContent("York County School of Technology")
+    .openOn(map);
+*/
 // Add the York County GeoJSON layer for York County
 let geojson1;
 try {
