changed video class name

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width"/>
 <head>
 
-  <div class="video-background">
+  <div class="video-container">
     <div id="video">
-        <video autoplay muted loop preload playsinline>
+        <video controls muted loop preload playsinline autoplay>
             <!-- <source src="/videos/videoName.mp4" type="video/mp4"> -->
             <source src="/videos/mr_saia.mp4" type="video/mp4">
         </video>
     </div>
+  </div>
     
         <div class="slideshow-container">
 
