--- a/static/styles.css
+++ b/static/styles.css
@@ -387,7 +387,7 @@ footer a {
 }
 
 /* background video */
-.video-background { 
+.video-container { 
     position: relative;
     overflow: hidden;
     display: flex;
@@ -405,7 +405,7 @@ footer a {
     border: 2px solid #a8a8a8;
     border-left: none;
     border-right: none;
-    
+    bottom: 0;
     z-index:-1;
 }
 
@@ -414,31 +414,22 @@ video {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index:-1;
 }
 
-/* home page mobile */
+/* home page video mobile */
 @media (max-width: 650px) {
 
-    .home-container {
-        position: relative;
-        display: auto;
-        justify-content: center;
-        align-items: center;
-    
-        z-index: 1;
-    }
-
-    .video-background {
+    .video-container {
         position: relative;
         overflow: hidden;
         display: flex;
         text-align: center;
         align-items: center;
         justify-content: center;
-        width: 100%; /* edit this percentage value to change the width of the video on the page */
+        width: auto; /* edit this percentage value to change the width of the video on the page */
         height: 80%; /* edit this percentage value to change the height of the video on the page */
         background-color: #9c9c9c;
         z-index:-1;
@@ -450,7 +441,7 @@ video {
         width: 100%;
         height: 100%;
         top: 0;
-        left: 0;
+        margin: auto;
         z-index:-1;
     }
 }
