made soprts page links open in new tab and changed width of dividers on sports page (css)

--- a/views/sports.ejs
+++ b/views/sports.ejs
@@ -23,7 +23,7 @@
         <div class="sports-sections">
             <h2>Important Info</h2>
             The sports calendar can be viewed at the link below
-            <p><a href="https://ytechspartans.bigteams.com/main/calendar">Click Here</a></p>
+            <p><a href="https://ytechspartans.bigteams.com/main/calendar" target="_blank" rel="noopener noreferrer">Click Here</a></p>
         </div>
 
         <div class="divider"></div>
@@ -40,8 +40,8 @@
         <div class="sports-sections">
             <h2>Other</h2>
             Here are the links to watch all Ytech Sports Games<br> <br>
-            <a href="https://www.youtube.com/@ytechsports7949/featured">Home Games - Youtube</a><br>
-                <a href="https://www.yaiaa.com/live-streams">Away Games - Yaiaa ?</a>
+            <a href="https://www.youtube.com/@ytechsports7949/featured" target="_blank" rel="noopener noreferrer">Home Games - Youtube</a><br>
+                <a href="https://www.yaiaa.com/live-streams" target="_blank" rel="noopener noreferrer">Away Games - Yaiaa ?</a>
             <div class="mini-divider"></div>
 
         </div>
