disabled video controls

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 
   <div class="video-container">
     <div id="video">
-        <video controls muted="true" loop preload playsinline autoplay disablepictureinpicture>
+        <video muted="true" loop preload playsinline autoplay disablepictureinpicture>
             <!-- <source src="/videos/videoName.mp4" type="video/mp4"> -->
             <source src="/videos/mr_saia.mp4" type="video/mp4">
         </video>
