--- a/views/districtmap.ejs
+++ b/views/districtmap.ejs
@@ -32,12 +32,7 @@ L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 var marker = L.marker([39.9302254,-76.6869776]).addTo(map)
     .bindPopup("York County School of Technology")
     .openPopup();
-/*
-var popup = L.popup()
-    .setLatLng([39.9302254,-76.6869776])
-    .setContent("York County School of Technology")
-    .openOn(map);
-*/
+
 // Add the York County GeoJSON layer for York County
 let geojson1;
 try {
@@ -47,6 +42,9 @@ try {
 }
 if (geojson1) {
   L.geoJSON(geojson1, {
+    filter: function(feature) {
+      return feature.id !== 53549532; // Hide the node with id 53549532
+    },
     style: function(feature) {
       return {
         color: '#095540', // green outline
@@ -140,6 +138,24 @@ if (geojson6) {
     style: function(feature) {
       return {
         color: '#072a79', // blue outline
+        weight: 3 // 3-pixel outline width
+      };
+    }
+  }).addTo(map);
+}
+
+// Add the GeoJSON layer for Spring Grove Area School District
+let geojson7;
+try {
+  geojson7 = JSON.parse('<%- JSON.stringify(geojson7) %>');
+} catch (error) {
+  console.error(error);
+}
+if (geojson7) {
+  L.geoJSON(geojson7, {
+    style: function(feature) {
+      return {
+        color: '#003087', // blue outline
         weight: 3 // 3-pixel outline width
       };
     }
