--- a/views/parents.ejs
+++ b/views/parents.ejs
@@ -35,7 +35,7 @@
             <p id="WhereDoIaccess">
             By having a student already enrolled at York Tech you automatically have an account
             Parents of a new student, you will use the same username and password that you created when completing your student’s online application.
-            ACCESS SKYWARD HERE https://skyward.iscorp.com/YorkTechPAStuSTS/
+            <a href="https://skyward.iscorp.com/YorkTechPAStuSTS/">ACCESS SKYWARD HERE</a> 
             If you do not know your username or password, please select the Forgot Username and Password link.  Then type in your email address and the information will be sent to your email shortly. 
             <h2>How do I gain access?</h2>
             <p id="HowDoIGainaccess">
