--- a/views/sports.ejs
+++ b/views/sports.ejs
@@ -8,29 +8,62 @@
 </head>
 
 <body>
+    <!-- The container in which the content of the page is in -->
     <div class="sports-container">
-
+        <!-- Top of the sports page summarizing the content of the page-->
         <div class="athletics-summary">
             <h1>Spartan Athletics</h1>
-            <h4>Welcome to the Spartan Athletics Page. Here you can find all sorts of information regarding sports at York Tech. </h4>
+            <h4>Welcome to the Spartan Athletics Page. <br> Here you can find all sorts of information regarding sports at York Tech. </h4>
             <p>Principal: Mr. Andrew Loehwing</p>
             <p>Athletic Director: Rob Caruso</p>
-            <p>Assistant Athletic Director: Open</p>
+            <p>Assistant Athletic Director: Open <a href="https://www.ytech.edu/cms/One.aspx?portalId=20326321&pageId=20615379" target="_blank" rel="noopener noreferrer">Apply Here?</a></p>
         </div>
 
+        <!-- Between each "sports-section" of this page, there will be a "divider" to make it look nice-->
         <div class="divider"></div>
 
         <div class="sports-sections">
+        <!-- Important info section of sports page. Here is where all the important information anyone will need will be easily accessed. -->
             <h2>Important Info</h2>
+            <h3>Calendar</h3>
             The sports calendar can be viewed at the link below
-            <p><a href="https://ytechspartans.bigteams.com/main/calendar" target="_blank" rel="noopener noreferrer">Click Here</a></p>
+            <u><p><a href="https://ytechspartans.bigteams.com/main/calendar" target="_blank" rel="noopener noreferrer">Click Here</a></p></u>
+
+            <!-- mini-dividers are for sub-sections -->
+            <div class="mini-divider"></div>
+
+            <h3>Event Admission Prices</h3>
+            <!-- Admission for sports events -->
+            <div class="admission">
+                <div id="gamePrices">
+                    <h5>VARSITY: </h5> 
+                    <p>Adults: $4.00 <br> Students (K-12): $2.00 </p>
+                </div>
+                
+                <div class="vertical-divider"></div>
+
+                <div id="gamePrices">
+                    <h5>FRESHMAN (JV): </h5> 
+                    <p> Adults: $2.00 <br> Students (K-12): $1.00</p>
+                </div>
+
+                <div class="vertical-divider"></div>
+
+                <div id="gamePrices">
+                    <h5>ALL CONTESTS:</h5> 
+                    <p>Senior Citizens: $2.00</p>
+                </div>
+            </div>
+
         </div>
 
         <div class="divider"></div>
 
         <div class="sports-sections">
+        <!-- Sports announcements go here -->
             <h2>Announcements</h2>
-            <h4>Athlete of the week: Name</h4>
+
+            <h4>*Athlete of the week: Name </h4>
 
             <p>All sports announcements go here</p>
         </div>
@@ -38,12 +71,23 @@
         <div class="divider"></div>
 
         <div class="sports-sections">
+        <!-- Other less important info will go here -->
             <h2>Other</h2>
             Here are the links to watch all Ytech Sports Games<br> <br>
             <a href="https://www.youtube.com/@ytechsports7949/featured" target="_blank" rel="noopener noreferrer">Home Games - Youtube</a><br>
-                <a href="https://www.yaiaa.com/live-streams" target="_blank" rel="noopener noreferrer">Away Games - Yaiaa ?</a>
+            <a href="https://www.yaiaa.com/live-streams" target="_blank" rel="noopener noreferrer">Away Games - Yaiaa ?</a>
+
             <div class="mini-divider"></div>
 
+            <h3>Campus Map</h3>
+            <p>The link to the campus map is 
+                <u><a href="http://www.ytech.edu/UserFiles/Servers/Server_20326237/File/Driving%20Directions%20&%20Campus%20Map.pdf" target="_blank" rel="noopener noreferrer">here</a></u>
+            </p>
+        </div>
+
+        <div class="asterisk">
+        <!-- if something is marked with a * it is a new idea that is not currently on the actual ytech website -->
+            <p>* new ideas</p>
         </div>
 
     </div>
