--- a/static/styles.css
+++ b/static/styles.css
@@ -265,6 +265,7 @@ footer a {
     font-family: Verdana, sans-serif;
   }
 
+  /* slideshow css */
   .mySlides {
     display: none;
     height: x;
@@ -280,7 +281,6 @@ footer a {
     position: relative;
     margin: auto;
   }
-
 
   .prev,
   .next {
@@ -300,12 +300,10 @@ footer a {
     background-color: #1b1b1b;
   }
 
-
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
-
 
   .prev {
     left: 0;
@@ -316,7 +314,6 @@ footer a {
   .dot:hover {
     background-color: #004d0a;
   }
-
 
   .text {
     color: #f2f2f2;
@@ -363,7 +360,7 @@ footer a {
       font-size: 11px
     }
   }
-
+/* end slideshow css */
 
 /*District Map CSS*/
 
@@ -386,7 +383,7 @@ footer a {
     }
 }
 
-/* background video */
+/* background video css */
 .video-container { 
     position: relative;
     overflow: hidden;
@@ -445,13 +442,17 @@ video {
         z-index:-1;
     }
 }
+/* end background video css */
 
-/* Athletics Page */
+
+/* Athletics Page Css*/
 
 .sports-container {
+    display: block;
     position: relative;
     justify-content: center;
     align-items: center;
+    font-size: 95%;
     top: 0;
     z-index: 1;
     margin: 1%;
@@ -463,44 +464,12 @@ video {
     text-align: center;
     font-size: 110%;
     top: 15%;
-    width: 30%;
+    max-width: 80%;
     height: auto;
     margin: auto;
     margin-top: 2%;
     margin-bottom: 2%;
     overflow: auto;
-}
-
-.divider {
-    position: relative;
-    align-self: center;
-    border-top: 2px solid rgb(167, 167, 167);
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-    margin: auto;
-    height: auto;
-    max-width: 30%;
-    width: 28%;
-    top: 15%;
-    padding: 2%;
-    margin-bottom: -2%;
-}
-
-.mini-divider {
-    position: relative;
-    align-self: center;
-    border-top: 2px solid rgb(167, 167, 167);
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-    margin: auto;
-    height: auto;
-    max-width: 20%;
-    width: 15%;
-    padding: 2%;
-    margin-bottom: -4%;
-    margin-top: 1%;
 }
 
 .sports-sections {
@@ -514,6 +483,64 @@ video {
     font-size: 115%;
 }
 
+.divider {
+    position: relative;
+    align-self: center;
+    border-top: 2px solid rgb(167, 167, 167);
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    margin: auto;
+    height: auto;
+    width: 28%;
+    min-width: 25%;
+    top: 15%;
+    padding: 2%;
+    margin-bottom: -2%;
+}
+
+.mini-divider {
+    position: relative;
+    align-self: center;
+    border-top: 1.5px solid rgb(167, 167, 167);
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    margin: auto;
+    height: auto;
+    max-width: 20%;
+    width: 15%;
+    padding: 2%;
+    margin-bottom: -4%;
+    margin-top: 1%;
+}
+
+.vertical-divider {
+    border-left: 1.5px solid rgb(167, 167, 167);
+    width: auto;
+    height: auto;
+}
+
+.admission {
+    display: flex;
+    justify-content: center;
+}
+
+#gamePrices {
+    margin: 1%;
+}
+
+/* bottom of page */
+.asterisk {
+    font-weight: bold;
+    font-style: italic;
+    color: #696969;
+    margin: auto;
+    text-align: center;
+    justify-content: center;
+    bottom: 2%;
+}
+
 /* Athletics page mobile */
 
 @media (max-width: 650px) {
@@ -523,33 +550,47 @@ video {
 
     .athletics-summary {
         overflow: auto;
-        font-size: 85%;
-        width: 40%;
+        font-size: 95%;
         height: auto;
         margin: auto;
-
+        max-width: 75%;
         margin-bottom: 3%;
     }
 
     .divider {
-        margin:auto;
+        margin: auto;
         height: auto;
-        max-width: 60%;
-        width: 50%;
+        max-width: 70%;
+        width: 60%;
     }
 
     .mini-divider {
-        margin:auto;
+        margin: auto;
         height: auto;
         max-width: 60%;
-        width: 30%;
+        width: 40%;
+        border-top: 1.5px solid rgb(167, 167, 167);
+    }
+
+    .vertical-divider {
+        border-left: 2px solid rgb(167, 167, 167);
     }
 
     .sports-sections {
         margin: auto;
         height: auto;
+        font-size: 105%;
+        padding-bottom: 2%;
+    }
+
+
+    /* bottom of page */
+    .asterisk {
+        font-weight: lighter;
     }
 }
+/* end athletics page css */
+
 
 
 /* Template for pages CSS */
