--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,42 +1,44 @@
 <html>
 
-<%- include('partials/_header') -%>          
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width"/>
-<head>
+<%- include('partials/_header') -%>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width" />
 
-  <div class="video-container">
-    <div id="video">
+  <title>York County School of Technology</title>
+
+  <head>
+    <!-- Home page background video -->
+    <div class="video-container">
+      <div id="video">
         <video muted="true" loop preload playsinline autoplay disablepictureinpicture>
-            <!-- <source src="/videos/videoName.mp4" type="video/mp4"> -->
-            <source src="/videos/mr_saia.mp4" type="video/mp4">
+          <!-- template for video looks like this -> <source src="/videos/videoName.mp4" type="video/mp4"> -->
+          <source src="/videos/mr_saia.mp4" type="video/mp4">
         </video>
+      </div>
     </div>
-  </div>
-    
-        <div class="slideshow-container">
 
-          <div class="mySlides fade">
-            <img src="/imgs/ytechstudents4.jpeg" style="width:100%">
-          </div>
+    <!-- Home page slideshow -->
+    <div class="slideshow-container">
 
-          <div class="mySlides fade">
-            <img src="/imgs/ytechstudents.jpeg" style="width:100%">
-          </div>
+      <div class="mySlides fade">
+        <img src="/imgs/ytechstudents4.jpeg" style="width:100%">
+      </div>
 
-          <div class="mySlides fade">
-            <img src="/imgs/ytechstudents3.jpeg" style="width:100%">
-          </div>
+      <div class="mySlides fade">
+        <img src="/imgs/ytechstudents.jpeg" style="width:100%">
+      </div>
 
-        </div>
-
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="minusSlides()">❮</a>
-        <a class="next" onclick="plusSlides()">❯</a>
+      <div class="mySlides fade">
+        <img src="/imgs/ytechstudents3.jpeg" style="width:100%">
+      </div>
 
     </div>
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="minusSlides()">❮</a>
+    <a class="next" onclick="plusSlides()">❯</a>
+    </div>
+
     <br>
 
     <div style="text-align:center">
@@ -88,9 +90,8 @@
           plusSlides();
         }, 10000);
       }
-
-
     </script>
+
     <%- include('partials/_footer') -%>
 
 </html>
