--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,3 +1,4 @@
+    <!-- this is the content in the footer -->
 <footer class="footer">
     <div class="flex-container">
         <h3>York County School of Technology</h3>
@@ -8,7 +9,7 @@
             <a href="https://www.ytech.edu/about/non_discrimination_statement">NON DISCRIMINATION STATEMENT</a>
         </p>
     </div>
-
+    <!-- this is all the footer social media links -->
     <div class="flex-container">
         <a href="https://twitter.com/YTSpartanNation" class="login-button" style="text-align:right">
         <img border="0" alt="facebook" src="/imgs/twitter.png" width="75" height="75">
