--- a/views/districtmap.ejs
+++ b/views/districtmap.ejs
@@ -145,6 +145,24 @@ if (geojson6) {
     }
   }).addTo(map);
 }
+
+// Add the GeoJSON layer for Spring Gove Area School District
+let geojson7;
+try {
+  geojson7 = JSON.parse('<%- JSON.stringify(geojson7) %>');
+} catch (error) {
+  console.error(error);
+}
+if (geojson7) {
+  L.geoJSON(geojson7, {
+    style: function(feature) {
+      return {
+        color: '#003087', // blue outline
+        weight: 3 // 3-pixel outline width
+      };
+    }
+  }).addTo(map);
+}
     </script>
 </body>
 <%- include('partials/_footer') -%>
