--- a/views/parents.ejs
+++ b/views/parents.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
 <center>
+            <!--Parents page-->
             <div class="Parents">
             <h1>Welcome Parents and Caregivers</h1>
             <h2>What information can I access?</h1>
