--- a/views/sports.ejs
+++ b/views/sports.ejs
@@ -37,6 +37,7 @@
 
         <div class="divider"></div>
 
+        <!-- Links to watch school sports -->>
         <div class="sports-sections">
             <h2>Other</h2>
             Here are the links to watch all Ytech Sports Games<br> <br>
