--- a/static/styles.css
+++ b/static/styles.css
@@ -264,24 +264,25 @@ footer a {
   body {
     font-family: Verdana, sans-serif;
   }
-
+  /*Slides*/
   .mySlides {
     display: none;
     height: x;
   }
-
+  /*Images... duh*/
   img {
     vertical-align: middle;
   }
 
-  
+  /*Container with slides*/
   .slideshow-container {
     max-width: 1500px;
     position: relative;
     margin: auto;
+    left: 750px;
   }
 
-
+  /* Arrows on buttons */
   .prev,
   .next {
     cursor: pointer;
@@ -300,18 +301,19 @@ footer a {
     background-color: #1b1b1b;
   }
 
-
+  /*Next button*/
   .next {
-    right: 0;
+    right: 750px;
     border-radius: 3px 0 0 3px;
   }
 
-
+  /*Previous button*/
   .prev {
-    left: 0;
+    left: 45px;
     border-radius: 3px 0 0 3px;
   }
 
+  /* Show effects when hovering over dot or arrow */
   .active,
   .dot:hover {
     background-color: #004d0a;
@@ -328,6 +330,7 @@ footer a {
     text-align: center;
   }
 
+    /* Dots under slides */
    .dot {
     height: 15px;
     width: 15px;
@@ -336,6 +339,8 @@ footer a {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+    position: relative;
+    left: 1070px;
   }
 
   .active {
@@ -387,7 +392,7 @@ footer a {
 }
 
 /* background video */
-.video-container { 
+.video-background { 
     position: relative;
     overflow: hidden;
     display: flex;
@@ -396,7 +401,7 @@ footer a {
     justify-content: center;
 
     width: 100%;  /* edit this percentage value to change the width of the video on the page */
-    height: 70%; /* edit this percentage value to change the height of the video on the page */
+    height: 90%; /* edit this percentage value to change the height of the video on the page */
 
     background-color: #bebebe;
     font-size: 20;
@@ -405,7 +410,7 @@ footer a {
     border: 2px solid #a8a8a8;
     border-left: none;
     border-right: none;
-    bottom: 0;
+    
     z-index:-1;
 }
 
@@ -414,22 +419,31 @@ video {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    bottom: 0;
+    top: 0;
     left: 0;
     z-index:-1;
 }
 
-/* home page video mobile */
+/* home page mobile */
 @media (max-width: 650px) {
 
-    .video-container {
+    .home-container {
+        position: relative;
+        display: auto;
+        justify-content: center;
+        align-items: center;
+    
+        z-index: 1;
+    }
+
+    .video-background {
         position: relative;
         overflow: hidden;
         display: flex;
         text-align: center;
         align-items: center;
         justify-content: center;
-        width: auto; /* edit this percentage value to change the width of the video on the page */
+        width: 100%; /* edit this percentage value to change the width of the video on the page */
         height: 80%; /* edit this percentage value to change the height of the video on the page */
         background-color: #9c9c9c;
         z-index:-1;
@@ -441,7 +455,7 @@ video {
         width: 100%;
         height: 100%;
         top: 0;
-        margin: auto;
+        left: 0;
         z-index:-1;
     }
 }
@@ -463,7 +477,7 @@ video {
     text-align: center;
     font-size: 110%;
     top: 15%;
-    width: 30%;
+    width: 24%;
     height: auto;
     margin: auto;
     margin-top: 2%;
@@ -481,7 +495,7 @@ video {
     margin: auto;
     height: auto;
     max-width: 30%;
-    width: 28%;
+    width: 25%;
     top: 15%;
     padding: 2%;
     margin-bottom: -2%;
@@ -551,118 +565,6 @@ video {
     }
 }
 
-/*HEAD*/
-* {
-    box-sizing: border-box;
-  }
-
-  body {
-    font-family: Verdana, sans-serif;
-  }
-
-  .mySlides {
-    display: none;
-    height: x;
-  }
-
-  img {
-    vertical-align: middle;
-  }
-
-  /* Slideshow container */
-  .slideshow-container {
-    max-width: 1500px;
-    position: relative;
-    margin: auto;
-  }
-
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    border-style: groove;
-    background-color: #1b1b1b;
-  }
-
-  /* Move the "right arrow" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-
-  /* Move the "left arrow" to the left */
-  .prev {
-    left: 0;
-    border-radius: 3px 0 0 3px;
-  }
-
-  .active,
-  .dot:hover {
-    background-color: #004d0a;
-  }
-
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-
-  
-          /* The dots/bullets/indicators */
-          .dot {
-            height: 15px;
-            width: 15px;
-            margin: 0 2px;
-            background-color: #bbb;
-            border-radius: 50%;
-            display: inline-block;
-            transition: background-color 0.6s ease;
-          }
-
-          .active {
-            background-color: #1b1b1b;
-          }
-
-          /* Fading animation */
-          .fade {
-            animation-name: fade;
-            animation-duration: 10.0s;
-          }
-
-          @keyframes fade {
-            from {
-              opacity: .8
-            }
-
-            to {
-              opacity: 1
-            }
-          }
-
-          /* On smaller screens, decrease text size */
-          @media only screen and (max-width: 300px) {
-            .text {
-              font-size: 11px
-            }
-          }
-        
-
 
 /* Template for pages CSS */
 
@@ -679,4 +581,3 @@ video {
 .middle-container {
 text-align: center;
 }
-/*>>>>>>> upstream/DEV*/
