--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,119 +1,83 @@
 <html>
 
-
-  <!--<link rel="stylesheet" href="home.css">-->
+<%- include('partials/_header') -%>         
+    
+  <meta charset="UTF-8">
+    
   <link rel="stylesheet" href="styles.css">
+    
+  <meta name="viewport" content="width=device-width" />
 
+  <head>
 
-  <body>
-    <div class="home-container">
-     
-
-   
-    <link rel="stylesheet" href="styles.css"/>
-    <meta name="viewport" content="width=device-width"/>
-<head>
-    <title>York County School of Technology</title>
-</head>
-    <body>
-        <div class="home-container">
-                
-                <div class="video-background">
-                    <div id="video">
-                        <video autoplay muted loop preload playsinline>
-                            <!-- <source src="video" type="video.mp4"> -->
-                            <source src="/videos/background.mp4" type="video/mp4">
-                            <!-- <source src="/videos/mr_saia.mp4" type="video/mp4"> -->
-                        </video>
-                    </div>
-                </div>
-
-                <div class="whyUs">
-                    <u><h3>Why York Tech?</h3></u>
-                    <p>Why York Tech? Here we teach our students how to be career ready and how to be professional.</p>
-                    <p>When our students leave York Tech, they are ready to take on the workforce head-on and be prepared for what comes ahead of them. </p>
-                </div>
-
-
-                <div class="quickLinks">
-                    <u><h3>Quick Links</h3></u>
-                    <a href="/newhome">new home page</a>
-                    <br>
-                    <a href="/newhome">new home page</a>
-                    <br>
-                    <a href="/newhome">new home page</a>
-                    <br>
-                    <a href="/newhome">new home page</a>
-                </div>
-                
-                <div class="announcements">
-                    <u><h3>Announcements</h3></u>
-                    <a href="/newhome">new home page</a>
-                    <br>
-                    <a href="/newhome">new home page</a>
-                    <br>
-                    <a href="/newhome">new home page</a>
-                </div>
-
-  <div class="video-container">
-    <div id="video">
-        <video controls muted loop preload playsinline autoplay>
-            <!-- <source src="/videos/videoName.mp4" type="video/mp4"> -->
-            <source src="/videos/mr_saia.mp4" type="video/mp4">
+    <div class="video-background">
+         <div id="video">
+               <video autoplay muted loop preload playsinline>
+                    
+          <!-- <source src="/videos/videoName.mp4" type="video/mp4"> -->
+                    
+          <source src="/videos/mr_saia.mp4" type="video/mp4">
+                
         </video>
+           </div>
+
+             
+            
+      
     </div>
-  </div>
-    
-        <div class="slideshow-container">
+       <br>
+    <!-- Picture in each slide -->>
+    <div class="slideshow-container">
 
-          <div class="mySlides fade">
-            <img src="/imgs/ytechstudents4.jpeg" style="width:100%">
-          </div>
+               <div class="mySlides fade">
+                   <img src="/imgs/ytechstudents4.jpeg" style="width:45%">
+                 </div>
 
-          <div class="mySlides fade">
-            <img src="/imgs/ytechstudents.jpeg" style="width:100%">
-          </div>
+               <div class="mySlides fade">
+                   <img src="/imgs/ytechstudents.jpeg" style="width:45%">
+                 </div>
 
-          <div class="mySlides fade">
-            <img src="/imgs/ytechstudents3.jpeg" style="width:100%">
-          </div>
+               <div class="mySlides fade">
+                   <img src="/imgs/ytechstudents3.jpeg" style="width:45%">
+                 </div>
+<!-- Next and previous buttons -->
+       <a class="prev" onclick="minusSlides()">❮</a>
+       <a class="next" onclick="plusSlides()">❯</a>
 
-        </div>
+  
+             </div>
 
+      <!-- Show active dot under active slide -->>
+           <span class="dot" onclick="currentSlide(1)"></span>
+           <span class="dot" onclick="currentSlide(2)"></span>
+           <span class="dot" onclick="currentSlide(3)"></span>
+         </div>
 
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="minusSlides()">❮</a>
-        <a class="next" onclick="plusSlides()">❯</a>
-
-    </div>
-    <br>
-
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
-
+      
     <script>
       let slideIndex = 1;
       let timer;
 
       showSlides(slideIndex);
 
+      //If no more slides exist in the list, start over
       function plusSlides() {
         showSlides(slideIndex += 1);
         if (slideIndex == 4) slideIndex = 1;
       }
 
+      //If no more previous slides exist, start at last slide
       function minusSlides() {
         showSlides(slideIndex -= 1);
         if (slideIndex == 0) slideIndex = 3;
       }
 
+      //Current slide
       function currentSlide(n) {
         showSlides(slideIndex = n);
       }
 
+      //Show slides and declare variables for aspects of slides
       function showSlides(n) {
         let i;
         const slides = document.getElementsByClassName("mySlides");
@@ -140,6 +104,6 @@
 
 
     </script>
-
+       <%- include('partials/_footer') -%>
 
 </html>
